21 January 2014: Wouter
	- Fix #547: no trustanchor written if filesystem full, fclose checked.

17 January 2014: Wouter
	- Fix isprint() portability in sldns, uses unsigned int.
	- iana portlist updated.

16 January 2014: Wouter
	- fix #544: Fixed +i causes segfault when running with module conf
	  "iterator".
	- Windows port, adjust %lld to %I64d, and warning in win_event.c.

14 January 2014: Wouter
	- iana portlist updated.

5 Dec 2013: Wouter
	- Fix bug in cachedump that uses sldns.
	- update pythonmod for ldns_ to sldns_ name change.

3 Dec 2013: Wouter
	- Fix sldns to use sldns_ prefix for all ldns_ variables.
	- Fix windows compile to compile with sldns.

30 Nov 2013: Wouter
	- Fix sldns to make globals use sldns_ prefix.  This fixes
	  linking with libldns that uses global variables ldns_ .

13 Nov 2013: Wouter
	- Fix bug#537: compile python plugin without ldns library.

12 Nov 2013: Wouter
	- Fix bug#536: acl_deny_non_local and refuse_non_local added.

5 Nov 2013: Wouter
	- Patch from Neel Goyal to fix async id assignment if callback
	  is called by libunbound in the mesh attach.
	- Accept ip-address: as an alternative for interface: for
	  consistency with nsd.conf syntax.

4 Nov 2013: Wouter
	- Patch from Neel Goyal to fix callback in libunbound.

3 Nov 2013: Wouter
	- if configured --with-libunbound-only fix make install.

31 Oct 2013: Wouter
	- Fix #531: Set SO_REUSEADDR so that the wildcard interface and a 
	  more specific interface port 53 can be used at the same time, and
	  one of the daemons is unbound.
	- iana portlist update.
	- separate ldns into core ldns inside ldns/ subdirectory.  No more
	  --with-ldns is needed and unbound does not rely on libldns.
	- portability fixes for new USE_SLDNS ldns subdir codebase.

22 Oct 2013: Wouter
	- Patch from Neel Goyal: Add an API call to set an event base on an
	  existing ub_ctx.  This basically just destroys the current worker and
	  sets the event base to the current.  And fix a deadlock in